# hackathon

./: .gitignore  skaffold.yaml  todo
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/apps/: urls.py
backend/apps/war/: admin.py  apps.py  consumers.py  models.py  routing.py  serializer.py  views.py
backend/apps/war/migrations/: 0001_initial.py  0002_remove_quiz_question_question_quiz.py
backend/apps/war/templates/apps/war/: index.html
backend/devproject/: asgi.py  settings.py  urls.py
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.jsx
frontend/src/Components/: App.jsx  Game.jsx  Question.jsx  SocketHandler.jsx  TeacherOrStudent.jsx
k8s/: client-deployment.yaml  ingress-service.yaml  server-deployment.yaml
