[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Carson Weeks <mail@carsonweeks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
channels = "^3.0.4"
channels-redis = "^3.4.0"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
